<resources>
    <string name="app_name">Greenery App</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_org">Organization Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid user name</string>
    <string name="invalid_surname">Not a valid user surname</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_devices">Devices</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="invalid_role">Can\'t be empty!</string>
    <string name="invalid_org">Can\'t be empty!</string>
    <string name="register_failed">Register failed</string>
    <string name="prompt_email">Email</string>
    <string name="invalid_email">Not a valid email!</string>
    <string name="prompt_co2">CO2 Level</string>
    <string name="prompt_ground_humidity">Ground Humidity</string>
    <string name="action_update">Update</string>
    <string name="prompt_air_humidity">Air Humidity</string>
    <string name="prompt_air_temp">Air Temperature</string>
    <string name="prompt_light_level">Light Level</string>
</resources>